# brikk

./: .gitignore  README.md  devbox.json  justfile  pyproject.toml
.github/workflows/: publish.yaml
docs/: conf.py  index.rst  install.rst
